--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,10 +4,10 @@
 
             <div class="site-info">
                 <div class="primary-info">
-                    <h1>Uplifting News</h1>
+                    <h1>Uplifting News.</h1>
 
-                    <h3>We will help restore your faith in humanity. </h3>
-
+                    <h4>We will help restore your faith in humanity. </h4>
+                    <br><br>
                     <p>Content from Reddit's <a href="https://www.reddit.com/r/UpliftingNews">/r/UpliftingNews.</a></p>
                 </div>
             </div>
