--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,21 +1,13 @@
 <main class="container left-container" ng-controller="MainCtrl">
     <div class="row">
-        <section class="sidebar col-md-5 col-sm-12" style="background-image: url(images/default-sidebar.jpg)">
+        <section class="sidebar col-md-5 col-sm-12" style="background-image: url(images/tmp.jpg)">
 
-            <div class="site-info">
-                <div class="primary-info">
-                    <h1>Uplifting News.</h1>
-
-                    <h4>We will help restore your faith in humanity. </h4>
-                    <br><br>
-                    <p>Content from Reddit's <a href="https://www.reddit.com/r/UpliftingNews">/r/UpliftingNews.</a></p>
-                </div>
-            </div>
         </section>
         <!-- end sidebar -->
 
         <section class="col-md-7 col-sm-12 col-md-offset-5 main-content">
-            <div><i class="fa fa-child fa-6" style="font-size: 70px; margin-left: auto; margin-right: auto; width: 100%">&nbsp;&nbsp;<iframe src="https://ghbtns.com/github-btn.html?user=ltalhouarne&type=follow&count=true&size=small"
+            <div><h4>Just the good news. <br><br><p>Content from Reddit's <a href="https://www.reddit.com/r/UpliftingNews">/r/UpliftingNews.</a></p></h4></div>
+            <div><i class="fa fa-child fa-6" style="font-size: 70px; margin-left: auto; margin-right: auto; width: 100%">&nbsp;&nbsp; <iframe src="https://ghbtns.com/github-btn.html?user=ltalhouarne&type=follow&count=true&size=small"
                                                                                                                                              frameborder="0" scrolling="0" width="200" height="30px"></iframe></i></div>
             <br><br>
             <div class="home-page-posts animated fadeIn ">
