--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <main class="container left-container" ng-controller="MainCtrl">
     <div class="row">
-        <section class="sidebar col-md-5 col-sm-12" style="background-image: url(images/tmp.jpg)">
+        <section class="sidebar col-md-5 col-sm-12" style="background-image: url(images/background.jpg)">
 
         </section>
         <!-- end sidebar -->
