--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,10 @@
         <section class="col-md-7 col-sm-12 col-md-offset-5 main-content">
             <div><h4>Just the good news. <br><br><p>Content from Reddit's <a href="https://www.reddit.com/r/UpliftingNews">/r/UpliftingNews.</a></p></h4></div>
             <div><i class="fa fa-child fa-6" style="font-size: 70px; margin-left: auto; margin-right: auto; width: 100%">&nbsp;&nbsp; <iframe src="https://ghbtns.com/github-btn.html?user=ltalhouarne&type=follow&count=true&size=small"
-                                                                                                                                             frameborder="0" scrolling="0" width="200" height="30px"></iframe></i></div>
+                                                                                                                                             frameborder="0" scrolling="0" width="200" height="30px"></iframe></i>
+
+            </div>
+
             <br><br>
             <div class="home-page-posts animated fadeIn ">
                 <div ng-repeat="post in posts">
